deployment/base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
      - name: backend-api
        image: 461024279936.dkr.ecr.ap-south-1.amazonaws.com/astroyaar/prod:latest
        ports:
        - containerPort: 8000
      volumes:
---
apiVersion: v1
kind: Service
metadata:
  name: backend-api
spec:
  selector:
    app: backend-api
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
