deployment/base/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: metadata-db
spec:
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
  selector:
    app: metadata-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: metadata-db
spec:
  serviceName: metadata-db
  replicas: 1
  selector:
    matchLabels:
      app: metadata-db
  template:
    metadata:
      labels:
        app: metadata-db
    spec:
      containers:
      - name: postgres
        image: postgres:13
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: ebs-csi-auto-mode
      resources:
        requests:
          storage: 10Gi
